--- a/deck.mdx
+++ b/deck.mdx
@@ -2,95 +2,89 @@ import { CodeSurferLayout } from "code-surfer";
 import "prismjs/components/prism-java";
 import "prismjs/components/prism-scala";
 
-export { githubFull as theme } from "code-surfer/themes";
+import { githubFull } from "code-surfer/themes";
+import myTheme from './myTheme';
 
-# Hello 👋
+export const themes = [githubFull, myTheme]
 
-You are using [MDX Deck](https://github.com/jxnblk/mdx-deck) and [Code Surfer](https://github.com/pomber/code-surfer)
+# :evergreen_tree: :evergreen_tree: :evergreen_tree:
+
+# Future-proofing Scala through TASTY
+
+Guillaume Martres - EPFL
+
+# :evergreen_tree: :evergreen_tree: :evergreen_tree:
 
 ---
 
 <CodeSurferLayout>
 
-```scala title="This is a title"
-object Hi
-class Hi {
-  def hello: List[Int] = 1
-}
+```scala
+obj.fun(5)
 ```
 
-```js 1:3 subtitle="This is a subtitle"
-function hello(name) {
-  console.log("hello " + name);
-}
+```scala 1[1:3],3,6[1:16]
+obj.fun(5)
 
-hello("world");
+// Parser output:
+Apply(
+  Select(
+    Ident("obj"),
+    "fun"
+  ),
+  Literal(5)
+)
 ```
 
-```js subtitle="New code is highlighted by default"
-function helloFactory() {
-  return name => {
-    console.log("hello " + name);
-  };
-}
+```scala 1[4],5,8[1:3]
+obj.fun(5)
 
-function hello(name) {
-  console.log("hello " + name);
-}
-
-hello("world");
+// Parser output:
+Apply(
+  Select(
+    Ident("obj"),
+    "fun"
+  ),
+  Literal(5)
+)
 ```
 
-```js subtitle="Adding more code so I can show you how the zoom works"
-function helloFactoryBuilder() {
-  return () => () => name => {
-    console.log("hello " + name);
-  };
-}
+```scala 1[5:7],7
+obj.fun(5)
 
-function helloBuilder() {
-  return name => {
-    console.log("hello " + name);
-  };
-}
-
-function helloFactory() {
-  return name => {
-    console.log("hello " + name);
-  };
-}
-
-function hello(name) {
-  console.log("hello " + name);
-}
-
-hello("world");
+// Parser output:
+Apply(
+  Select(
+    Ident("obj"),
+    "fun"
+  ),
+  Literal(5)
+)
 ```
 
-```js 1:23
-function helloFactoryBuilder() {
-  return () => () => name => {
-    console.log("hello " + name);
-  };
-}
+```scala 1[8,10],4,10
+obj.fun(5)
 
-function helloBuilder() {
-  return name => {
-    console.log("hello " + name);
-  };
-}
-
-function helloFactory() {
-  return name => {
-    console.log("hello " + name);
-  };
-}
-
-function hello(name) {
-  console.log("hello " + name);
-}
-
-hello("world");
+// Parser output:
+Apply(
+  Select(
+    Ident("obj"),
+    "fun"
+  ),
+  Literal(5)
+)
 ```
 
+```scala 1[9],9
+obj.fun(5)
+
+// Parser output:
+Apply(
+  Select(
+    Ident("obj"),
+    "fun"
+  ),
+  Literal(5)
+)
+```
 </CodeSurferLayout>
