--- a/deck.mdx
+++ b/deck.mdx
@@ -2,6 +2,8 @@ import { CodeSurferLayout } from "code-surfer";
 import "prismjs/components/prism-java";
 import "prismjs/components/prism-scala";
 
+import { Mermaid } from "./mermaid";
+
 import { githubFull } from "code-surfer/themes";
 import myTheme from './myTheme';
 
@@ -17,72 +19,104 @@ Guillaume Martres - EPFL
 
 ---
 
+# Compiler pipeline
+
+<Mermaid chart={`
+graph LR;
+src{Hello.scala} --> Parser;
+subgraph Frontend
+  Parser --> Typer;
+end
+subgraph p
+  Typer --> Pickler;
+  Pickler --> tst{Hello.tasty};
+end
+Pickler --> Middle-End;
+Middle-End --> Backend;
+Backend --> dst{Hello.class};
+`} />
+
+---
+
+# Untyped Tree
+
+<Mermaid params={{ theme: "forest" }} chart={`
+graph TB;
+app(Apply) --> sel(Select);
+app --> lit("Literal");
+lit --> 5("5");
+sel --> id("Ident(''obj'')");
+sel --> fun("''meth''");
+`} />
+
+---
+
 <CodeSurferLayout>
 
 ```scala
-obj.fun(5)
+obj.meth(5)
 ```
 
 ```scala 1[1:3],3,6[1:16]
-obj.fun(5)
+obj.meth(5)
 
 // Parser output:
 Apply(
   Select(
     Ident("obj"),
-    "fun"
+    "meth"
   ),
   Literal(5)
 )
 ```
 
 ```scala 1[4],5,8[1:3]
-obj.fun(5)
+obj.meth(5)
 
 // Parser output:
 Apply(
   Select(
     Ident("obj"),
-    "fun"
+    "meth"
   ),
   Literal(5)
 )
 ```
 
-```scala 1[5:7],7
-obj.fun(5)
+```scala 1[5:8],7
+obj.meth(5)
 
 // Parser output:
 Apply(
   Select(
     Ident("obj"),
-    "fun"
+    "meth"
   ),
   Literal(5)
 )
 ```
 
-```scala 1[8,10],4,10
-obj.fun(5)
+```scala 1[9,11],4,10
+obj.meth(5)
 
 // Parser output:
 Apply(
   Select(
     Ident("obj"),
-    "fun"
+    "meth"
   ),
   Literal(5)
 )
 ```
 
-```scala 1[9],9
-obj.fun(5)
+```scala 1[10],9
+obj.meth(5)
 
 // Parser output:
 Apply(
   Select(
     Ident("obj"),
-    "fun"
+    "meth"
   ),
   Literal(5)
 )
