fork graphviz-react locally

--- a/deck.mdx
+++ b/deck.mdx
@@ -3,7 +3,7 @@ import "prismjs/components/prism-java";
 import "prismjs/components/prism-scala";
 
 import { Mermaid } from "./mermaid";
-import { Graphviz } from 'graphviz-react';
+import { Graphviz } from "./Graphviz";
 
 import { githubFull } from "code-surfer/themes";
 import myTheme from './myTheme';
