--- a/deck.mdx
+++ b/deck.mdx
@@ -207,7 +207,7 @@ digraph {
 bgcolor=transparent;
 rankdir=LR;
 node [fontsize="28.0", fontname="Source Sans Pro", shape="box"];
-magic [label="✨ Magic ✨", style="filled", fillcolor="#aa96da"];
+magic [label="✨ Magic ✨", style="filled", fillcolor="#d6c8ff"];
 src [label="Hello.scala", shape="note", style="filled", fillcolor="#f8f3d4"];
 dst [label="Hello.class", shape="note", style="filled", fillcolor="#f8f3d4"];
 { rank=same src magic dst }
@@ -219,7 +219,7 @@ digraph {
 bgcolor=transparent;
 rankdir=LR;
 node [fontsize="28.0", fontname="Source Sans Pro", shape="box"];
-magic [label="✨ Magic ✨", style="filled", fillcolor="#aa96da"];
+magic [label="✨ Magic ✨", style="filled", fillcolor="#d6c8ff"];
 src [label="Hello.scala", shape="note", style="filled", fillcolor="#f8f3d4"];
 dst [label="Hello.class", shape="note", style="filled", fillcolor="#f8f3d4"];
 Parser [ style="filled", fillcolor="#f9f7f7"];
@@ -234,90 +234,54 @@ src -> Parser -> magic -> dst;
 
 # Parsing
 
-<CodeSurferLayout>
-
-```scala
-obj.meth(5)
-```
-
-```scala 1[1:3],3,6[1:16]
-obj.meth(5)
-
-// Parser output:
-Apply(
-  Select(
-    Ident("obj"),
-    "meth"
-  ),
-  Literal(5)
-)
-```
-
-```scala 1[4],5,8[1:3]
-obj.meth(5)
-
-// Parser output:
-Apply(
-  Select(
-    Ident("obj"),
-    "meth"
-  ),
-  Literal(5)
-)
-```
-
-```scala 1[5:8],7
-obj.meth(5)
-
-// Parser output:
-Apply(
-  Select(
-    Ident("obj"),
-    "meth"
-  ),
-  Literal(5)
-)
-```
-
-```scala 1[9,11],4,10
-obj.meth(5)
-
-// Parser output:
-Apply(
-  Select(
-    Ident("obj"),
-    "meth"
-  ),
-  Literal(5)
-)
-```
-
-```scala 1[10],9
-obj.meth(5)
-
-// Parser output:
-Apply(
-  Select(
-    Ident("obj"),
-    "meth"
-  ),
-  Literal(5)
-)
-```
-</CodeSurferLayout>
-
----
-
-# Making untyped trees
-
-<Mermaid params={{ theme: "forest" }} chart={`
-graph TB;
-app(Apply) --> sel(Select);
-app --> lit("Literal");
-lit --> 5("5");
-sel --> id("Ident(''obj'')");
-sel --> fun("''meth''");
-`} />
+<Graphviz dot={[
+`
+digraph {
+margin=1.0;
+bgcolor=transparent;
+rankdir=TB;
+node [shape="box", fontname="Source Sans Pro", fontsize="28.0", style="rounded, filled", fillcolor="#cde498"];
+Ident -> "\\\"obj\\\""
+labelloc="t";
+fontname="Fira Mono";
+fontsize="50.0";
+label=< <b>obj</b>  >;
+}
+`,
+`
+digraph {
+margin=0.5;
+bgcolor=transparent;
+rankdir=TB;
+node [shape="box", fontname="Source Sans Pro", fontsize="28.0", style="rounded, filled"];
+Ident -> "\\\"obj\\\""
+node [fillcolor="#cde498"];
+Select -> Ident
+Select -> "\\\"elem\\\""
+labelloc="t";
+fontname="Fira Mono";
+fontsize="50.0";
+label=<             <b>obj.elem</b>                    >;
+}
+`,
+`
+digraph {
+bgcolor=transparent;
+rankdir=TB;
+node [shape="box", fontname="Source Sans Pro", fontsize="28.0", style="rounded, filled"];
+Ident -> "\\\"obj\\\""
+Select -> Ident
+Select -> "\\\"elem\\\""
+node [fillcolor="#cde498"];
+Apply -> Select
+Apply -> Literal -> 5
+labelloc="t";
+fontname="Fira Mono";
+fontsize="50.0";
+label=<             <b>obj.elem(5)</b>                    >;
+}
+`,
+]} />
 
 ---
 
