--- a/deck.mdx
+++ b/deck.mdx
@@ -773,3 +773,11 @@ See `TastyFormat.scala` in [github.com/lampepfl/dotty](github.com/lampepfl/dotty
     <li>See Nicolas' talk on Metaprogramming tomorrow for more information.</li>
   </Appear>
 </ul>
+
+---
+
+# :christmas_tree: :evergreen_tree: :christmas_tree: :evergreen_tree: :christmas_tree:
+
+# Thank you!
+
+# :evergreen_tree: :christmas_tree: :evergreen_tree: :christmas_tree: :evergreen_tree:
